[package]
name = "pepefetch"
version = "5.0.0"
edition = "2021"
license-file = "README.md"
description = "The pepe frog linux fetch."
repository = "https://github.com/sigmw/pepefetch"
include = [
  "assets/ascii"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systemstat = "0.1.10"
ansi_term = "0.12.1"
local_ipaddress = "0.1.3"
