[package]
name = "pepefetch"
version = "6.0.0"
edition = "2021"
license-file = "README.md"
description = "The pepe frog linux fetch."
repository = "https://github.com/sigmw/pepefetch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systemstat = "0.2.2"
ansi_term = "0.12.1"
local_ipaddress = "0.1.3"
rand = "0.8.5"
